--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "next-connect": "^1.0.0",
+    "next-images": "^1.8.5",
     "nodemailer": "^6.9.14",
     "nprogress": "^0.2.0",
     "razorpay": "^2.9.4",
